<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Clothing</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboarding1">Onboarding Screen 1</string>
    <string name="onboarding2">Onboarding Screen 2</string>
    <string name="onboarding3">Onboarding Screen 3</string>
    <string name="one">1</string>
    <string name="page_count">/3</string>
    <string name="skip">Skip</string>
    <string name="choose_product">Choose Product</string>
    <string name="context1">A product is the item offered for sale. A product can be a service or an item. It can be physical or in virtual or cyber form</string>
    <string name="button_1"><![CDATA[Next >]]></string>
    <string name="two">2</string>
    <string name="make_payment">Make payment</string>
    <string name="context_2">Payment is the transfer of money services in exchange product or Payments typically made terms agreed</string>
    <string name="button_2"><![CDATA[Next >>]]></string>
    <string name="three">3</string>
    <string name="get_your_order">Get Your Order</string>
    <string name="context_3">Business or commerce an order is a stated intention either spoken to engage in a commercial transaction specific products</string>
    <string name="button_3"><![CDATA[Get Started >>>]]></string>
    // login screen

    <string name="sign_in">Log In</string>
    <string name="or">Or</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_dont" tools:ignore="StringEscaping">Don\'t have an account?</string>


    <!-- Signup_page-->
    <string name="sign_up">Sign Up</string>

    <string name="name">User Name</string>
    <string name="email_address">Sample@gmail.com</string>
    <string name="password">Password</string>

    <string name="text_term">I accept all the</string>
    <string name="text3">Terms &amp; Conditions</string>

    <string name="buttonText">Sign Up</string>

    <string name="text2">if already have an account?</string>
    <string name="log_in">Log In</string>

    //Product details

    <string name="pd_title">Causal Honely Shirts</string>
    <string name="cost">$100</string>
    <string name="pd_desc">A Henley shirt is a collarless pullover shirt, by a round neckline and a placket about 3 to 5 inches (8 to 13 cm) long and usually having 2–5 buttons.</string>
    <string name="pd_btn">Add to cart</string>

    //Forget Screen
    <string name="submit_btn">Submit</string>
    <string name="forgot_text">Forgot Password</string>

    //CartPage
    <string name="card_heading">My cart</string>
    <string name="cart_product_text1">Henley Shirts</string>
    <string name="cart_product_price1">250</string>
    <string name="product_quantity1">1</string>

    <string name="cart_product_text2">Henley T-Shirts</string>
    <string name="cart_product_price2">550</string>
    <string name="product_quantity2">1</string>
    <string name="sub_total">Sub Total :</string>
    <string name="total_price">800</string>
    <string name="cart_btn_text">Checkout</string>
    <string name="settings_title">Settings</string>
    <string name="email_support">Email Support</string>
    <string name="settings_faq">FAQ</string>
    <string name="settings_privacy_statement">Privacy Statement</string>
    <string name="settings_notification">Notification</string>
    <string name="settings_update">Update</string>

    <!--Home -->
    <string name="home_name">Home Fragment</string>

    <!--cart -->
    <string name="cart_name">Cart Fragment</string>

    <!--favorite-->
    <string name="favorite_name">Favorite Name</string>

    <!-- profile -->
    <string name="profile">Profile</string>
    <string name="profile_name">Alex Nikiforov</string>
    <string name="profile_email">alex@msn.com</string>
    <string name="profile_personal_information">Personal Information</string>
    <string name="profile_card_Name">Name</string>
    <string name="profile_card_chrisharison">Chris Harison</string>
    <string name="profile_card_email">chris@gmail.com</string>
    <string name="profile_card_location">Email</string>
    <string name="profile_card_zipcode">Zip Code</string>
    <string name="profile_card_no">1200</string>
    <string name="profile_card_phone">Phone Number</string>
    <string name="profile_card_mobile">(+1)5848475784</string>

    <!-- bottom nav-->
    <string name="bottom_home">Home</string>
    <string name="bottom_cart">Cart</string>
    <string name="bottom_favorite">Favorite</string>
    <string name="bottom_profile">Profile</string>
    <string name="bottom_settings">Settings</string>

    <!--side nav -->
    <string name="side_favorite">Favorite</string>
    <string name="side_wallest">Wallets</string>
    <string name="side_myorder">My order</string>
    <string name="side_aboutus">About us</string>
    <string name="side_privacy_policy">Privacy policy</string>
    <string name="side_checkout">Check Out</string>
    <string name="Log_out">Log out</string>

    <!--toolbar nav-->
    <string name="notification">Notification</string>

    <!-- header-->
    <string name="alex">Alex Nikiforov</string>
    <string name="fashion">Fashion Designer</string>

    //Product Listing Page
    <string name="category1">Dress</string>
    <string name="category2">Shirt</string>
    <string name="category3">T-shirt</string>
    <string name="category4">Pants</string>
    <string name="category5">Electronics</string>

    //product Listing Page
    <string name="explore">Explore</string>
    <string name="category">Categories :</string>
    <string name="best">best Outfits for you</string>
    <string name="search">Search Items…</string>

    //Page Names
    <string name="aboutUs">About Us Fragment</string>
    <string name="myOrder">MyOrder Fragment</string>
    <string name="wallet">Wallets Fragment</string>

    //My Orders
    <string name="date1">Today</string>
    <string name="date2">20 Mar 2021</string>

    <string name="loading">Loading…</string>

    //About Us
    <string name="aboutusMiniHeading">Nice to meet you</string>
    <string name="Detailed">We are a fashion destination for the contemporary Indian who seeks authentic brand experiences. As the official online platform for International brands like U.S. Polo Assn., Sephora, Arrow, Tommy Hilfiger, Calvin Klein, Aéropostale, Ed Hardy, and leading Indian brands like Flying Machine, AD by Arvind, Ruggers, Colt, Shuffl, Anahi and Karigari amongst many others, we not only showcase the largest width of merchandise for these brands but also offer the freshest in-season products.</string>
    <string name="google">open<a href="https://www.google.com/"> google</a></string>
    <string name="head">C l o t h i n g</string>

    //Check out
    <string name="zero">0</string>
    <string name="delAddress">Delivery Address</string>
    <string name="addressNumber1">(342) 4522019</string>
    <string name="addressCity1">220 Newyork</string>
    <string name="addressNumber2">(242) 4522019</string>
    <string name="addressCity2">220 Caifornia</string>
    <string name="office">Office</string>
    <string name="billingInfo">Billing Information</string>
    <string name="deliveryFee">Delivery Fee :</string>
    <string name="subtotal">Subtotal :</string>
    <string name="totalPrice1">Total :</string>
    <string name="delivary">99</string>
    <string name="order">Place Order</string>

    //Facebook

    <string name="facebook_app_id">1195625994399072</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>

    // FAQ and Privacy screens

    <string name="privacy_description">This Privacy Policy describes Our policies and procedures on the collection,use and disclosure of Your information when You use the Service and tells You about Your Privacy rights and how the law protects You. We use Your Personal data to provide and improves the Service.By using the Service,You agree to the collection and use of information in accordance with this Privacy Policy.</string>
    <string name="privacy_statement">Privacy Statement</string>
    <string name="firstQue">I want to track my order?</string>
    <string name="firstAns">Check order status and call the delivery agent</string>
    <string name="secondQue">I want help with returns and refunds?</string>
    <string name="secondAns">Manage and track returns</string>
    <string name="thirdQue">I want to manage my order?</string>
    <string name="thirdAns">Cancel,change delivery date and address</string>

</resources>