<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="7dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        android:layout_marginTop="40dp"
        tools:layout_editor_absoluteY="305dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explore"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:textColor="@color/grey" />

            <SearchView
                android:id="@+id/search"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/search_backgroung"
                android:iconifiedByDefault="false"
                android:queryHint="Search Here"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:textColor="@color/black" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints"
                    android:layout_marginBottom="20dp"
                    tools:layout_editor_absoluteX="7dp"
                    tools:layout_editor_absoluteY="7dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="1dp"
                        android:layout_marginLeft="1dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_marginBottom="1dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </LinearLayout>





            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/gridItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                tools:layout_editor_absoluteX="16dp" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:indeterminateTint="@color/orange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/orange"
                android:text="@string/loading"
                android:gravity="center"/>


        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>